--- a/react/websocket.html
+++ b/react/websocket.html
@@ -8,6 +8,8 @@
     <title>Echo</title>
   </head>
   <body>
+    <div 
+    <div id="serialToolbar"></div>
     <div id="echoWebsocket"></div>
     <script src="bundle.websocket.js"></script>
   </body>
